# telerobot

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  vr_processor.py  vr_teleop.py
examples/config/: dual-arms.yaml  single-arm.yaml
server/: __init__.py  vr_headset.py  webrtc_camera_server.py
src/telerobot/: __init__.py  __main__.py  cli.py  config.py  logger.py
src/telerobot/controller/: __init__.py  controller.py  kinematics.py  vr_processor.py
src/telerobot/dataset/: __init__.py  dataset.py
src/telerobot/server/: __init__.py  vr_headset.py  webrtc_camera_server.py  websocket_server.py  webxr_server.py
src/telerobot/web_ui/: index.html
src/telerobot/web_ui/js/: websocket-manager.js
src/telerobot/web_ui/js/components/: controller-axes.js  dataset-panel.js  laser-visibility.js  passthrough-manager.js  video-panel.js  vr-button.js  websocket-panel.js
web-ui/: index.html
web-ui/js/: webrtc-manager.js  websocket-manager.js
web-ui/js/components/: look-at-headset.js  vr-button.js
